Evaluation Results/AProVE/slice+cncrt/FSE/loop/Signed_Overflow_Error_3_T/Signed_Overflow_Error_3_T_Loop14_TestCase1.txt
MAYBE
proof of /FILES_DIR/concretizer/Signed_Overflow_Error_3_T_Loop14_TestCase1.c
# AProVE Commit ID: 48c83ccb80d5f8312cb92f4aa1b51dc35e247e65 nils 20241118 unpublished


Termination of the given C Problem could not be shown:

(0) C Problem


----------------------------------------

(0)
Obligation:
c file /FILES_DIR/concretizer/Signed_Overflow_Error_3_T_Loop14_TestCase1.c/FILES_DIR/concretizer/Signed_Overflow_Error_3_T_Loop14_TestCase1.c:5:1: warning: return type of 'main' is not 'int' [-Wmain-return-type]
void main(void)
^
/FILES_DIR/concretizer/Signed_Overflow_Error_3_T_Loop14_TestCase1.c:5:1: note: change return type to 'int'
void main(void)
^~~~
int
/FILES_DIR/concretizer/Signed_Overflow_Error_3_T_Loop14_TestCase1.c:7:25: error: non-ASCII characters are not allowed outside of literals and identifiers
  unsigned int number = ???5;
                        ^
Runtime: 2314 milliseconds
